--- a/customCamera/customCamera/Info.plist
+++ b/customCamera/customCamera/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>FullScreenCamera uses the camera to take photos and video</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>FullScreenCamera  saves captured photos and videos to your photo library</string>
 </dict>
 </plist>
